retrieveUnpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Créditos%2C leasing%2C mejoramiento de vivienda</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Abierta</fullName>
        </values>
        <values>
            <fullName>Anulada</fullName>
        </values>
        <values>
            <fullName>Detenida</fullName>
        </values>
        <values>
            <fullName>Ganada</fullName>
        </values>
        <values>
            <fullName>Recepción de documentos</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cuenta de ahorros - CDT</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Abierta</fullName>
        </values>
        <values>
            <fullName>Anulada</fullName>
        </values>
        <values>
            <fullName>Detenida</fullName>
        </values>
        <values>
            <fullName>Ganada</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Abierta__c</fullName>
        <formula>VALUE((IF( TEXT( StageName )= &quot;Abierta&quot;,&quot;1&quot;,&quot;0&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abierta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antiguedad_del_inmueble__c</fullName>
        <label>Antigüedad del inmueble</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anulada__c</fullName>
        <formula>VALUE((IF( TEXT( StageName )= &quot;Anulada&quot;,&quot;1&quot;,&quot;0&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anulada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aporta_Ingresos_Codeudor_1__c</fullName>
        <label>Aporta Ingresos Codeudor 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aporta_Ingresos_Codeudor_2__c</fullName>
        <label>Aporta Ingresos Codeudor 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aporta_Ingresos_Codeudor_3__c</fullName>
        <label>Aporta Ingresos Codeudor 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_asesor__c</fullName>
        <formula>Owner.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Área asesor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asignacion_de_cupo__c</fullName>
        <label>Asignación de cupo</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo_de_producto__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asignado_a_Canal_digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asignado a Canal digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Camapa_1__c</fullName>
        <label>Campaña</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canal_de_atencion__c</fullName>
        <label>Canal de atención</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red de oficinas</fullName>
                </value>
                <value>
                    <fullName>Sala de ventas</fullName>
                </value>
                <value>
                    <fullName>Canal Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Celular_Asesor_Global__c</fullName>
        <description>Número de celular del asesor Global Seguros</description>
        <label>Celular Asesor Global</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Medellín</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Bucaramanga</fullName>
                </value>
                <value>
                    <fullName>Cali</fullName>
                </value>
                <value>
                    <fullName>Pereira</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente deudor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Codeudor 1)</relationshipLabel>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Codeudor 2)</relationshipLabel>
        <relationshipName>Oportunidades2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Codeudor 3)</relationshipLabel>
        <relationshipName>Oportunidades3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codigo_del_asesor__c</fullName>
        <description>Código del asesor Global Seguros</description>
        <label>Código del asesor</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constructora_nombre__c</fullName>
        <formula>Proyecto__r.Constructora__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constructora</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultas_realizadas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Consultas realizadas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Convenio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Convenio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Solicitud_al_gerente_comercial__c</field>
                <operation>equals</operation>
                <value>Aprobado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Convenio)</relationshipLabel>
        <relationshipName>OportunidadesConvenios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detalle__c</fullName>
        <label>Detalle</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Antigüedad</fullName>
                </value>
                <value>
                    <fullName>Cónyugue no cumple centrales</fullName>
                </value>
                <value>
                    <fullName>Soportes de la actividad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detenida__c</fullName>
        <formula>VALUE((IF( TEXT( StageName )= &quot;Detenida&quot;,&quot;1&quot;,&quot;0&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detenida</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dias_ejecutados__c</fullName>
        <formula>DAY( TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dias ejecutados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dias_laborales__c</fullName>
        <formula>30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días laborales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_cliente_deudor__c</fullName>
        <label>Email cliente deudor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estado_Consulta__c</fullName>
        <label>Estado consulta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disponible para consulta</fullName>
                    <default>true</default>
                    <label>Disponible para consulta</label>
                </value>
                <value>
                    <fullName>Esperando respuesta Consulta Interna</fullName>
                </value>
                <value>
                    <fullName>Esperando respuesta Datacrédito</fullName>
                </value>
                <value>
                    <fullName>Esperando respuesta CIFIN</fullName>
                </value>
                <value>
                    <fullName>Cantidad de consultas agotadas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excepcion__c</fullName>
        <label>Excepción</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ganada1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ganada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ganada__c</fullName>
        <formula>VALUE((IF( TEXT( StageName )= &quot;Ganada&quot;,&quot;1&quot;,&quot;0&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ganada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grupo_1__c</fullName>
        <label>Grupo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grupo_comercial__c</fullName>
        <formula>TEXT(Owner.Grupo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grupo comercial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importe_texto__c</fullName>
        <description>Convierte el importe a texto con el fin de evitar problemas de formato en la exportación</description>
        <formula>TEXT( Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe texto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingresos_Familiares__c</fullName>
        <description>Corresponde al total de ingresos que tienen en la familia para postularse al crédito</description>
        <inlineHelpText>Ingrese el total de ingresos de todos los aportantes para la solicitud de crédito</inlineHelpText>
        <label>Ingresos Familiares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingresos_familiares_texto__c</fullName>
        <description>Convierte los ingresos familiares a texto con el fin de evitar problemas de formato en la exportación</description>
        <formula>TEXT( Ingresos_Familiares__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos familiares texto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingresos_previstos_texto__c</fullName>
        <description>Convierte a texto el campo ingresos previstos con el fin de evitar problemas de formato en la exportación</description>
        <formula>TEXT( ExpectedRevenue )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos previstos texto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inmueble_identificado__c</fullName>
        <label>Inmueble identificado</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo_de_producto__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Libre_de_gravamenes_hipotecas_o_deudas__c</fullName>
        <label>Libre de gravámenes, hipotecas o deudas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meta</label>
        <referenceTo>Meta__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meta_prevalidaciones__c</fullName>
        <formula>104</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meta prevalidaciones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motivo_de_apertura__c</fullName>
        <label>Motivo de apertura</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No cumple score en datacrédito</fullName>
                </value>
                <value>
                    <fullName>No cumple políticas de centrales.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_desistido__c</fullName>
        <label>Motivo desistido</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito con otra entidad financiera</fullName>
                </value>
                <value>
                    <fullName>Tasa del crédito</fullName>
                </value>
                <value>
                    <fullName>No esta interesado en las condiciones</fullName>
                </value>
                <value>
                    <fullName>Plazo del crédito</fullName>
                </value>
                <value>
                    <fullName>Monto del crédito</fullName>
                </value>
                <value>
                    <fullName>No cumple política</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_no_viable_codeudor_1__c</fullName>
        <label>Motivo no viable codeudor 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Por definir tipo de vivienda</fullName>
                </value>
                <value>
                    <fullName>Documentos por entregar</fullName>
                </value>
                <value>
                    <fullName>Sin cuota inicial</fullName>
                </value>
                <value>
                    <fullName>Puntaje data Crédito</fullName>
                </value>
                <value>
                    <fullName>Antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Endeudamiento financiero</fullName>
                </value>
                <value>
                    <fullName>No maneja extractos bancarios</fullName>
                </value>
                <value>
                    <fullName>Mora pagada &lt; 1 año</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_no_viable_codeudor_2__c</fullName>
        <label>Motivo no viable codeudor 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Por definir tipo de vivienda</fullName>
                </value>
                <value>
                    <fullName>Documentos por entregar</fullName>
                </value>
                <value>
                    <fullName>Sin cuota inicial</fullName>
                </value>
                <value>
                    <fullName>Puntaje data Crédito</fullName>
                </value>
                <value>
                    <fullName>Antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Endeudamiento financiero</fullName>
                </value>
                <value>
                    <fullName>No maneja extractos bancarios</fullName>
                </value>
                <value>
                    <fullName>Mora pagada &lt; 1 año</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_no_viable_codeudor_3__c</fullName>
        <label>Motivo no viable codeudor 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Por definir tipo de vivienda</fullName>
                </value>
                <value>
                    <fullName>Documentos por entregar</fullName>
                </value>
                <value>
                    <fullName>Sin cuota inicial</fullName>
                </value>
                <value>
                    <fullName>Puntaje data Crédito</fullName>
                </value>
                <value>
                    <fullName>Antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Endeudamiento financiero</fullName>
                </value>
                <value>
                    <fullName>No maneja extractos bancarios</fullName>
                </value>
                <value>
                    <fullName>Mora pagada &lt; 1 año</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_no_viable_deudor__c</fullName>
        <label>Motivo no viable deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Por definir tipo de vivienda</fullName>
                </value>
                <value>
                    <fullName>Documentos por entregar</fullName>
                </value>
                <value>
                    <fullName>Sin cuota inicial</fullName>
                </value>
                <value>
                    <fullName>Puntaje data Crédito</fullName>
                </value>
                <value>
                    <fullName>Antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Endeudamiento financiero</fullName>
                </value>
                <value>
                    <fullName>No maneja extractos bancarios</fullName>
                </value>
                <value>
                    <fullName>Mora pagada &lt; 1 año</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_prevalidaciones__c</fullName>
        <label>No. prevalidaciones</label>
        <summaryForeignKey>Resultado_Prevalidador__c.Oportunidad__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_Asesor_Global__c</fullName>
        <description>Nombre del asesor de global seguros</description>
        <label>Nombre Asesor Global</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_vivienda__c</fullName>
        <description>Corresponde al número de vivienda que el cliente esta comprando, es decir, la primera (1), la segunda (2), etc.</description>
        <inlineHelpText>Ingrese el número de vivienda que el cliente va a comprar: primera vivienda (1), segunda vivienda (2), etc.</inlineHelpText>
        <label>Número de vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_estado_consulta__c</fullName>
        <label>Observaciones estado consulta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oficina__c</fullName>
        <label>Oficina</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Canal_de_atencion__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Barranquilla Centro</fullName>
                </value>
                <value>
                    <fullName>Bogotá 20 de Julio</fullName>
                </value>
                <value>
                    <fullName>Bogotá Calle 64</fullName>
                </value>
                <value>
                    <fullName>Bogotá Calle 69</fullName>
                </value>
                <value>
                    <fullName>Cali centro</fullName>
                </value>
                <value>
                    <fullName>Cali principal</fullName>
                </value>
                <value>
                    <fullName>Medellin Centro</fullName>
                </value>
                <value>
                    <fullName>Pereira</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origen__c</fullName>
        <label>Origen</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origen_real__c</fullName>
        <label>Origen real</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_movil__c</fullName>
        <formula>Owner.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Celular del propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <description>Número de meses para pagar un crédito.</description>
        <label>Plazo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proyecto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proyecto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Proyecto__c.Estado_de_aprobacion_Riegos__c</field>
                <operation>equals</operation>
                <value>Aprobado</value>
            </filterItems>
            <filterItems>
                <field>Proyecto__c.Estado_de_aprobacion_Riegos__c</field>
                <operation>notEqual</operation>
                <value>Bloqueado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Proyecto__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recepcion_de_documentos__c</fullName>
        <formula>VALUE((IF( TEXT( StageName )= &quot;Recepción de documentos&quot;,&quot;1&quot;,&quot;0&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recepción de documentos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <formula>Owner.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resultado_del_Prevalidador__c</fullName>
        <label>Resultado del Prevalidador</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Owner.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiene_convenio__c</fullName>
        <label>Tiene convenio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A solicitud del cliente</fullName>
                </value>
                <value>
                    <fullName>Cliente interesado en otro producto financiero</fullName>
                </value>
                <value>
                    <fullName>Empleado no cumple política</fullName>
                </value>
                <value>
                    <fullName>Garantía del Inmueble no Viable</fullName>
                </value>
                <value>
                    <fullName>Independiente no cumple política</fullName>
                </value>
                <value>
                    <fullName>Información inválida</fullName>
                </value>
                <value>
                    <fullName>Ingreso inferior a 1 smlmv</fullName>
                </value>
                <value>
                    <fullName>No contactado</fullName>
                </value>
                <value>
                    <fullName>No cumple mora actual</fullName>
                </value>
                <value>
                    <fullName>No cumple mora actual NO VIS</fullName>
                </value>
                <value>
                    <fullName>No cumple mora histórica</fullName>
                </value>
                <value>
                    <fullName>No cumple mora histórica NO VIS</fullName>
                </value>
                <value>
                    <fullName>No interesado en el crédito</fullName>
                </value>
                <value>
                    <fullName>Pendiente entrega documentación</fullName>
                </value>
                <value>
                    <fullName>Pendiente por gestionar</fullName>
                </value>
                <value>
                    <fullName>Por actividad económica</fullName>
                </value>
                <value>
                    <fullName>Por antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Por edad</fullName>
                </value>
                <value>
                    <fullName>Por endeudamiento financiero vs ingreso</fullName>
                </value>
                <value>
                    <fullName>Por endeudamiento financiero y capacidad de Pago</fullName>
                </value>
                <value>
                    <fullName>Por historial financiero</fullName>
                </value>
                <value>
                    <fullName>Por monto insuficiente</fullName>
                </value>
                <value>
                    <fullName>Por nivel de ingresos (NO VIS)</fullName>
                </value>
                <value>
                    <fullName>Por problemas personales</fullName>
                </value>
                <value>
                    <fullName>Por solicitud de la constructora</fullName>
                </value>
                <value>
                    <fullName>Por tasas de interés</fullName>
                </value>
                <value>
                    <fullName>Prestador no cumple política</fullName>
                </value>
                <value>
                    <fullName>Primer contacto</fullName>
                </value>
                <value>
                    <fullName>Segundo contacto</fullName>
                </value>
                <value>
                    <fullName>Sin Cobertura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Registro_de_Oportunidad__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Registro de Oportunidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_persona__c</fullName>
        <label>Tipo de persona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natural</fullName>
                    <default>true</default>
                    <label>Natural</label>
                </value>
                <value>
                    <fullName>Jurídica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>